--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
   							<form id="register-form">
   								<div class="form-group">
     								<label for="InputFullName"><i class="fa fa-user-ninja"></i> Họ và tên</label>
-    								<input type="text" class="form-control" name="HoVaTen" placeholder="Nhập họ và tên của bạn" required autofocus>
+    								<input type="text" class="form-control" name="HoVaTen" placeholder="Nhập họ và tên của bạn" required>
   								</div>
   								<div class="form-row">
   									<div class="form-group col-md-6">
