--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
                   </div>
                   <div class="form-group">
                     <label for="InputTitle"><i class="fa fa-file-signature"></i> Tên tiết mục</label>
-                    <input type="text" class="form-control" name="TenTietMuc" placeholder="Nhập tên tiết mục của bạn" required autofocus>
+                    <input type="text" class="form-control" name="TenTietMuc" placeholder="Nhập tên tiết mục của bạn" required>
                   </div>
 								    <small id="emailHelp" class="form-text text-muted">Thông tin cá nhân của bạn sẽ không được chia sẻ.</small>
 								 <div id="btnsubmit">
