--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
               <p class="text3"><i class="fa fa-music"></i> Gala Sắc màu âm nhạc lần 5 với các thể loại:</p>
               <ul>
                 <li>Hát <i class="fa fa-microphone-alt"></i></li>
-                <li>Nhảy - Múa <i class="fa fa-shoe-prints"></i></li>
+                <li>Nhảy - Múa <i class="fa fa-female"></i></li>
                 <li>Kịch và thể loại khác <i class="fa fa-guitar"></i></li>
               </ul>
               <p class="text3"><i class="fa fa-user-tie"></i> Đối tượng tham gia: sinh viên Trường Đại học Công nghệ Tp. Hồ Chí Minh.</p>
@@ -50,8 +50,8 @@
               <p class="text3"><i class="fa fa-award"></i> Vòng sơ loại: 25/05/2019.</p>
               <p class="text3"><i class="fa fa-award"></i> Vòng chung kết: 05/06/2019.</p>
               <div class="col-md-12" style="text-align: center; margin-bottom: 15px;">
-                <button class="btn btn-danger" onclick="location.href='https://drive.google.com/file/d/1OcD6tFVV4yLSOmcVsoyJjIokWmNvbyl5/view';"><i class="fa fa-clipboard"></i> Thể lệ</button>
-                <button class="btn btn-info" onclick="location.href='https://www.facebook.com/BCH.QTKD/';"><i class="fa fa-laptop"></i> Fanpge</button>
+                <button class="btn btn-danger"><a href="https://drive.google.com/file/d/1OcD6tFVV4yLSOmcVsoyJjIokWmNvbyl5/view" target="_blank" style="color: #fff;text-decoration: none;"><i class="fa fa-clipboard"></i> Thể lệ</a></button>
+                <button class="btn btn-info"><a href="https://www.facebook.com/BCH.QTKD/" target="_blank" style="color: #fff;text-decoration: none;"><i class="fa fa-laptop"></i> Fanpage</a></button>
               </div>
             </div>
             <div class="col-md-4">
