--- a/index.html
+++ b/index.html
@@ -58,6 +58,9 @@
               <img src="image/avatar.png" width="100%">
             </div>
           </div>
+          <div>
+            <p class="text3" style="color: red; font-weight: bold; text-align: center;">Đã hết thời gian đăng ký, mọi chi tiết các bạn vui lòng liên hệ: <a href="tel:0336257577">0336 257 577</a>(đ/c Dương Nguyên Khải)</p>
+          </div>
   				<div class="row">
   					<div class="card" id="cardform">
   						<div class="card-body">
@@ -109,7 +112,7 @@
                   </div>
 								    <small id="emailHelp" class="form-text text-muted">Thông tin cá nhân của bạn sẽ không được chia sẻ.</small>
 								 <div id="btnsubmit">
-								 	<button type="submit" id="submit-form" class="btn btn-success"><i class="fa fa-spinner fa-spin"></i> Đăng ký tham gia</button>
+								 	<button type="submit" id="submit-form" class="btn btn-danger" disabled><i class="fa fa-spinner fa-spin"></i> Đã hết hạn đăng ký</button>
 								 </div>
 							</form>
   						</div> 
